--- a/src/game-server-management-console/game-server-management-console.csproj
+++ b/src/game-server-management-console/game-server-management-console.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2BF8876A-2C3A-4DA2-8B7C-97FC1CFD2303}</ProjectGuid>
+    <ProjectGuid>{A8F8423C-E9B9-4CD2-B7F8-8B31BFED8D40}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameServer</RootNamespace>
-    <AssemblyName>game-server</AssemblyName>
+    <RootNamespace>GameServerManagementConsole</RootNamespace>
+    <AssemblyName>game-server-management-console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,12 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientConnection.cs" />
-    <Compile Include="GameServerProgram.cs" />
+    <Compile Include="GameServerManagementConsoleProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\game-server-client\game-server-client.csproj">
+      <Project>{f4ab26c1-5e2f-4618-992e-e7d71fa7eacf}</Project>
+      <Name>game-server-client</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
