--- a/src/game-server/game-server.csproj
+++ b/src/game-server/game-server.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClientConnection.cs" />
     <Compile Include="GameServerProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
