move game rules into main framework

--- a/src/game-frame/game-frame.csproj
+++ b/src/game-frame/game-frame.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameRules.cs" />
+    <Compile Include="Games\NineMensMorrisGameRules.cs" />
+    <Compile Include="Games\TicTacToeGameRules.cs" />
     <Compile Include="IState.cs" />
     <Compile Include="NegamaxPlayer.cs" />
     <Compile Include="Player.cs" />
