NineMensMorrisGame implemented for server and bot

--- a/src/game-server/game-server.csproj
+++ b/src/game-server/game-server.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientConnection.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="NineMensMorrisGame.cs" />
     <Compile Include="TicTacToeGame.cs" />
     <Compile Include="GameServerProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
