--- a/src/game-server-bot/game-server-bot.csproj
+++ b/src/game-server-bot/game-server-bot.csproj
@@ -47,6 +47,7 @@
     <Compile Include="GameHandler.cs" />
     <Compile Include="GameServerBot.cs" />
     <Compile Include="GameServerBotProgram.cs" />
+    <Compile Include="NineMensMorrisHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TicTacToeHandler.cs" />
   </ItemGroup>
