--- a/src/game-server/game-server.csproj
+++ b/src/game-server/game-server.csproj
@@ -66,8 +66,9 @@
   <ItemGroup>
     <Compile Include="ClientConnection.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="NineMensMorrisGame.cs" />
-    <Compile Include="TicTacToeGame.cs" />
+    <Compile Include="Games\ConnectFourGame.cs" />
+    <Compile Include="Games\NineMensMorrisGame.cs" />
+    <Compile Include="Games\TicTacToeGame.cs" />
     <Compile Include="GameServerProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
