--- a/src/game-frame/game-frame.csproj
+++ b/src/game-frame/game-frame.csproj
@@ -64,11 +64,13 @@
     <Compile Include="Games\NineMensMorrisGameRules.cs" />
     <Compile Include="Games\TicTacToeGameRules.cs" />
     <Compile Include="Helpers\BitTwiddling.cs" />
+    <Compile Include="Helpers\StringArray.cs" />
     <Compile Include="IState.cs" />
     <Compile Include="NegamaxPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranspositionTable.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
