--- a/src/game-frame/game-frame.csproj
+++ b/src/game-frame/game-frame.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranspositionTable.cs" />
+    <Compile Include="UtilimaxPlayer.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
